--- a/wiki/npcs/index.html
+++ b/wiki/npcs/index.html
@@ -8,12 +8,14 @@
     {% for npc in character_group %}
         <a name="{{npc.id}}"></a>
         <h2>{{npc.name}}</h2>
-        {% if npc.has-page== true %}
-            <p>
-            <i>See</i> <a href="/wiki/{{npc.id}}">{{npc.name}}</a>
-            </p>
-        {% endif %}
-        <p>{{npc.excerpt}}</p>
+            {% if npc.collection %}
+                <p><i>See</i> <a href="/wiki/{{npc.id}}">{{npc.name}}</a>
+                </p>
+                <p>{{ site[npc.collection] | where: "w-id", npc.id | map: "excerpt" | last | markdownify }}
+                </p>
+            {% else %}
+                <p>{{npc.excerpt | markdownify }}</p>
+            {% endif %}
 
     {% endfor %}
 
