--- a/posts.html
+++ b/posts.html
@@ -29,8 +29,9 @@ h1 {
     display:block;
 }
 </style>
+{{paginator.total_pages}}
 <ul id="post">
-{% for post in site.posts %}
+{% for post in site.posts reversed %}
 <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
 
