incorporate alias preferences in list display

--- a/wiki/player_characters/index.html
+++ b/wiki/player_characters/index.html
@@ -16,7 +16,7 @@ layout: landing
             {{char.full-name}}<br>
         {% elsif char.alias %}
             <b>{{char.full-name}}</b><br>
-            {{char.alias}}<br>
+            "{{char.alias}}"<br>
         {% else %}
             <b>{{char.full-name}}</b><br>
         {% endif %}
