Add pc metadata documentation

--- a/wiki/player_characters/index.html
+++ b/wiki/player_characters/index.html
@@ -1,5 +1,5 @@
 ---
-title: BitD Philly | Player Characters
+title: Player Characters
 layout: landing
 ---
 
@@ -22,7 +22,7 @@ layout: landing
         {% endif %}
         {{char.playbook}}
         <hr>
-        {{char.excerpt}}
+        {{char.desc}}
     </li>
     {% endfor %}
 </ul>
