Minor PC page updates

--- a/wiki/player_characters/index.html
+++ b/wiki/player_characters/index.html
@@ -22,7 +22,7 @@ layout: landing
         {% endif %}
         {{char.playbook}}
         <hr>
-        {{char.desc}}
+        {{char.desc | default: char.excerpt}}
     </li>
     {% endfor %}
 </ul>
