--- a/wiki/player_characters/index.html
+++ b/wiki/player_characters/index.html
@@ -5,24 +5,25 @@ layout: landing
 
 <h1>Player Characters</h1>
 
-<ul class="pic_list">
+<ul class="wiki_list">
     {% for char in site.player_characters %}
-    <li>
+    <li width="60%">
         <a href="{{char.url}}">
             <img src="{{ site.baseurl}}/{{char.img_root| append: char.picture}}">
         </a>
         {% if char.alias and char.prefers-alias==true %}
-            <b>{{char.alias}}</b><br>
+            <h3>{{char.alias}}</h3>
             {{char.full-name}}<br>
         {% elsif char.alias %}
-            <b>{{char.full-name}}</b><br>
-            "{{char.alias}}"<br>
+            <h3>{{char.full-name}}</h3>
+            "{{char.alias | split: ","| join: '"; "'}}"<br>
         {% else %}
-            <b>{{char.full-name}}</b><br>
+            <h3>{{char.full-name}}</h3>
         {% endif %}
-        {{char.playbook}}
+        <i>{{char.playbook}}</i>
         <hr>
-        {{char.desc | default: char.excerpt}}
+        <p style="margin-bottom: 0">{{char.desc | default: char.excerpt}}</p>
+        <p style="text-align:right;width:100%;margin-top:0"><a href="{{char.url}}">Read More »</a></p>
     </li>
     {% endfor %}
 </ul>
